--- a/GFL/index.html
+++ b/GFL/index.html
@@ -43,6 +43,10 @@
                     <label><input type="radio" name="show-page" value="timer" checked><h2>Event Timer</h2></label>
                     <label><input type="radio" name="show-page" value="links"><h2>Links & Logs</h2></label>
                     <label><input type="radio" name="show-page" value="faqs"><h2>FAQs Sheet</h2></label>
+                </div>
+
+                <div id="timer-field">
+
                 </div-->
 
                 <table>
@@ -53,9 +57,9 @@
                 </table>
 
                 <div id="input-type-container">
-                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="search" checked><h2>Keyword</h2></label>
-                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="tags"><h2>Tags</h2></label>
-                    <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput(this)" value="browse"><h2>Browse</h2></label>
+                    <!--label><input type="radio" name="input-type" onclick="toggleInput(this)" value="search" checked><h2>Keyword</h2></label>
+                    <label><input type="radio" name="input-type" onclick="toggleInput(this)" value="tags"><h2>Tags</h2></label>
+                    <label><input type="radio" name="input-type" onclick="toggleInput(this)" value="browse"><h2>Browse</h2></label-->
                 </div>
 
                 <!-- #region Input Fields -->
