--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,15 +3,16 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import {AsyncFunc, zip} from '/univasset/scripts/externaljavascript.js';
+            import {AsyncFunc} from '/univasset/scripts/externaljavascript.js';
             import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
+            import {zip} from '/univasset/scripts/basefunctions/basefunctions.js';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const matrix = [['No', 'Elites', 'Non-Elites']];
-            const elite = new Set(), nonelite = new Set();
+            var elite = new Set(), nonelite = new Set();
 
             for (const {passive_skill, code} of jsonObject) (String(passive_skill).includes('200304') ? nonelite : elite).add(code);
-            for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(true, elite, nonelite)))) matrix.push([Number(index) + 1, unitE, unitNE ?? '']);
+            for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(elite, nonelite, true)))) matrix.push([Number(index) + 1, unitE, unitNE ?? '']);
 
             table(document.querySelector('#main_content div'), matrix);
         </script>
