--- a/GFL/index.html
+++ b/GFL/index.html
@@ -39,11 +39,10 @@
 
         <div class="container">
             <section id="main_content">
-                <!--div id="section_type">
-                    <label><input type="radio" name="show-page" value="timer" checked><h2>Event Timer</h2></label>
+                <div id="section_type"></div>
+                    <!--label><input type="radio" name="show-page" value="timer" checked><h2>Event Timer</h2></label>
                     <label><input type="radio" name="show-page" value="links"><h2>Links & Logs</h2></label>
-                    <label><input type="radio" name="show-page" value="faqs"><h2>FAQs Sheet</h2></label>
-                </div-->
+                    <label><input type="radio" name="show-page" value="faqs"><h2>FAQs Sheet</h2></label-->
 
                 <div id="timer-field"></div>
                 <div id="links-field"></div>
