--- a/PNC/units.html
+++ b/PNC/units.html
@@ -3,11 +3,11 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import {AsyncFunc} from "/univasset/scripts/externaljavascript.js";
             import {initializeHTML} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
+            import {getJSON} from "/univasset/scripts/externaljavascript.js";
             const list = document.createElement('dl');
 
-            for (const {name, reference, fragments, event} of (await AsyncFunc.getJSON('./units.json')).slice(0, -1)) {
+            for (const {name, reference, fragments, event} of getJSON('./units.json').slice(0, -1)) {
                 //name
                 list.appendChild(initializeHTML('dt', {textContent: name + (event ? ` - ${event}` : '')}));
 
