--- a/PNC/units.html
+++ b/PNC/units.html
@@ -4,10 +4,10 @@
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
             import {initializeHTML} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
-            import {getJSON} from "/univasset/scripts/externaljavascript.js";
+            import {Async} from "/univasset/scripts/externaljavascript.js";
             const list = document.createElement('dl');
 
-            for (const {name, reference, fragments, event} of getJSON('./units.json').slice(0, -1)) {
+            for (const {name, reference, fragments, event} of (await Async.getJSON('./units.json')).slice(0, -1)) {
                 //name
                 list.appendChild(initializeHTML('dt', {textContent: name + (event ? ` - ${event}` : '')}));
 
