--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             timer(document.getElementById('battlepass'), 'Mar 19, 2023 23:59 UTC-0800',
                 'https://preview.redd.it/lacxhmhbpoga1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=d820f33650f44cae82e839c4d8a2d13237bf88c9');
             document.getElementById('skin-banner');
+            document.getElementById('mini-event');
         </script>
 
         <meta charset='utf-8'>
@@ -39,6 +40,7 @@
                 <div id="event"></div>
                 <div id="battlepass"></div>
                 <div id="skin-banner"></div>
+                <div id="mini-event"></div>
             </section>
         </div>
     </body>
