--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
             document.getElementById('skin-banner');
 
-            timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
-                'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
+            function test() {
+                timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
+                    'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
+            }
+            timer(document.getElementById('mini-event'), 'Feb 21, 2023 23:59 UTC-0800',
+                'https://preview.redd.it/jdn2kthm5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=d17458e026085aef1c89b251e6e503b71b2ff07c',
+                {onEnd: test});
         </script>
 
         <meta charset='utf-8'>
