--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
+        <script type="module" src="/univasset/scripts/include/include.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
             </section>
         </div>
 
-        <script>
+        <script type="module">
             const div = document.querySelector('#main_content div');
             const span = document.querySelector('#main_content span');
 
