--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
+        <script type="module" src="/univasset/scripts/include/include.js"></script>
         <script type="module">
             import {AsyncFunc} from '/univasset/scripts/externaljavascript.js';
             import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
