--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
                 'https://preview.redd.it/lacxhmhbpoga1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=d820f33650f44cae82e839c4d8a2d13237bf88c9',
                 {onEnd: nextPass});
 
-            document.getElementById('skin-banner');
+            const nextBanner = timer.bind(null, document.getElementById('skin-banner'))
+            timer(document.getElementById('skin-banner'), 'Mar 13, 2023 23:59 UTC-0800',
+                'https://iopwiki.com/images/f/ff/New_Year_Nostalgia_Login_Wallpaper.png');
 
-            const miniStart = timer.bind(null, document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
+            timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
                 'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
-            timer(document.getElementById('mini-event'), 'Feb 21, 2023 00:00 UTC-0800',
-                'https://preview.redd.it/jdn2kthm5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=d17458e026085aef1c89b251e6e503b71b2ff07c',
-                {onEnd: miniStart});
         </script>
 
         <meta charset='utf-8'>
