--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 'https://preview.redd.it/lacxhmhbpoga1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=d820f33650f44cae82e839c4d8a2d13237bf88c9',
                 {onEnd: nextPass});
 
-            const nextBanner = timer.bind(null, document.getElementById('skin-banner'))
+            document.getElementById("coalition")
+
+            // const nextBanner = timer.bind(null, document.getElementById('skin-banner'))
             timer(document.getElementById('skin-banner'), 'Mar 13, 2023 23:59 UTC-0800',
                 'https://iopwiki.com/images/f/ff/New_Year_Nostalgia_Login_Wallpaper.png');
 
@@ -48,6 +50,7 @@
             <section id="main_content">
                 <div id="event"></div>
                 <div id="battlepass"></div>
+                <div id="coalition"></div>
                 <div id="skin-banner"></div>
                 <div id="mini-event"></div>
             </section>
