--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -6,7 +6,7 @@
             import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
             gdocDropdown(document.querySelector('#main_content div'),
-                ["iana's Unit Rating & Teambuilding Spreadsheet(Mirror)", 'https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4'],
+                //["iana's Unit Rating & Teambuilding Spreadsheet(Mirror)", 'https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4'],
                 ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
