--- a/GFL/index.html
+++ b/GFL/index.html
@@ -43,6 +43,21 @@
         <title>GFL Main Page | Random Scraps</title>
     </head>
 
+    <style>
+        /* #main_content > table {
+            margin-bottom: 10px;
+        } */
+
+        #main_content > table td {
+            border-style: ridge;
+            padding: 5px;
+        }
+
+        #main_content > table > tr {
+            background-color: initial;
+        }
+    </style>
+
     <body>
         <include src="/univasset/scripts/pageheader/header.html">"GFL Event Timer"</include>
 
