--- a/GFL/index.html
+++ b/GFL/index.html
@@ -44,14 +44,10 @@
     </head>
 
     <style>
-        /* #main_content > table {
-            margin-bottom: 10px;
-        } */
-
-        #main_content > table td {
+        /* #main_content > table td {
             border-style: ridge;
             padding: 5px;
-        }
+        } */
 
         #main_content > table > tr {
             background-color: initial;
