--- a/GFL/skins.html
+++ b/GFL/skins.html
@@ -6,8 +6,9 @@
             import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
             gdocDropdown(document.querySelector('#main_content div'),
+                ["u/corbsieboy's Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
                 ["GFL Skin/Furniture List", "https://docs.google.com/spreadsheets/d/10ceReDBnWKelZhSN0ztsK6EA2_14Ll8ktcXBHMMs9gQ"],
-                ["GFL Neural Upgrade", "https://docs.google.com/spreadsheets/d/1u2sXat4FD7jFLdjMLrq5zIiDrGJMEVaGvB2z2JysxLI"]
+                ["GFL Neural Upgrade", "https://docs.google.com/spreadsheets/d/1u2sXat4FD7jFLdjMLrq5zIiDrGJMEVaGvB2z2JysxLI"],
             )
 
             // G_EXCEL, '1fEnzlpQk5Jvja5PwzlpDn2ypqP3BHcGftqWWOLnK17E'
