--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -5,7 +5,7 @@
         <script type="module">
             import {AsyncFunc} from '/univasset/scripts/externaljavascript.js';
             import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
-            import {zip} from '/univasset/scripts/basefunctions/basefunctions.js';
+            import {zip} from '/univasset/scripts/basefunctions';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const matrix = [['No', 'Elites', 'Non-Elites']];
