--- a/GFL/index.html
+++ b/GFL/index.html
@@ -5,8 +5,8 @@
         <script type="module">
             import {timer} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
-            timer(document.getElementById('event'), 'Mar 06, 2023 23:59 UTC-0800',
-                'https://preview.redd.it/sip8lqjbh9ja1.jpg?width=1600&format=pjpg&auto=webp&v=enabled&s=54d124e31725023e06155b6b4eaea62c225d0290');
+            //timer(document.getElementById('event'), 'Mar 06, 2023 23:59 UTC-0800',
+            //    'https://preview.redd.it/sip8lqjbh9ja1.jpg?width=1600&format=pjpg&auto=webp&v=enabled&s=54d124e31725023e06155b6b4eaea62c225d0290');
 
             const nextPass = timer.bind(null, document.getElementById('battlepass'));
             timer(document.getElementById('battlepass'), 'Mar 19, 2023 23:59 UTC-0800',
