--- a/test.html
+++ b/test.html
@@ -34,6 +34,8 @@
         </div>
 
         <script type="module">
+            import {type} from "./univasset/scripts/basefunctions/index.js";
+
             const div = document.querySelector('#main_content div');
             const span = document.querySelector('#main_content span');
 
@@ -48,6 +50,9 @@
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
+
+            div.textContent = "./univasset/scripts/basefunctions/index.js"
+            span.textContent = ["asdf", 23, false, null, undefined].map(type).join(" ")
         </script>
     </body>
 </html>
