--- a/GFL/index.html
+++ b/GFL/index.html
@@ -63,7 +63,7 @@
                     <tr>
                         <td><a href="./faqs">Frequently Asked Questions</a></td>
                         <td><a href="./starter">New Player Guide</a></td>
-                        <td><a href="./skins">Skins, Furns, MODs, and SPEQs</a></td>
+                        <td><a href="./docs">Compilations</a></td>
                     </tr>
                     <tr>
                         <td><a href="./mainpage">Topics Repository</a></td>
