--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -97,6 +97,7 @@
                 <a href="#guide" id="guide"><h1>Any guide thread I should read before starting out?</h1></a>
                 <dl>
                     <dt>Gamepress</dt>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>   <!-- Might leave this one only. -->
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></dd>
