--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -5,13 +5,15 @@
         <script type="module">
             import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
-            gdocDropdown(document.querySelector('#main_content div'),
-                ["u/corbsieboy's Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
+            gdocDropdown(document.querySelector("#skins"),
                 ["GFL Skin/Furniture List", "https://docs.google.com/spreadsheets/d/10ceReDBnWKelZhSN0ztsK6EA2_14Ll8ktcXBHMMs9gQ"],
                 ["GFL Neural Upgrade", "https://docs.google.com/spreadsheets/d/1u2sXat4FD7jFLdjMLrq5zIiDrGJMEVaGvB2z2JysxLI"],
             )
-
             // G_EXCEL, '1fEnzlpQk5Jvja5PwzlpDn2ypqP3BHcGftqWWOLnK17E'
+
+            gdocDropdown(document.querySelector("#speqs")
+                ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
+            )
         </script>
 
         <meta charset='utf-8'>
@@ -39,8 +41,14 @@
 
         <div class="container">
             <section id="main_content">
-                <p>Created by u/ConductorBichir. Maintained by u/UnironicWeeaboo.</p>
-                <div></div>
+                <details>
+                    <summary>Skins/Furnitures/MODs. Created by u/ConductorBichir. Maintained by u/UnironicWeeaboo.</summary>
+                    <div id="skins"></div>
+                </details>
+                <details>
+                    <summary>SPEQs sheet. Created by u/corbsieboy.</summary>
+                    <div id="speqs"></div>
+                </details>                
             </section>
         </div>
     </body>
