--- a/test.html
+++ b/test.html
@@ -45,12 +45,11 @@
 
             const testArray = [1,2,3,4,5,6,7,8,9,0];
             
-            //var b = 'https://docs.google.com/spreadsheets/d/1gyn-6r_XBriYonFpj-RPkoQnCK36StTWJ0E5_yTU048/';
-            //var [link, type] = b.match(new RegExp('https://docs.google.com/(spreadsheets|document)/d/.{44}/'));
-            //document.getElementById('output').innerHTML = link;
+            /* var b = 'https://docs.google.com/spreadsheets/d/1gyn-6r_XBriYonFpj-RPkoQnCK36StTWJ0E5_yTU048/';
+            var [link, type] = b.match(new RegExp('https://docs.google.com/(spreadsheets|document)/d/.{44}'));
+            document.getElementById('output').innerHTML = link; */
             
             /* span.insertAdjacentText('beforeend', 'asdf');
-
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
