--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -11,7 +11,7 @@
             )
             // G_EXCEL, '1fEnzlpQk5Jvja5PwzlpDn2ypqP3BHcGftqWWOLnK17E'
 
-            gdocDropdown(document.querySelector("#speqs")
+            gdocDropdown(document.querySelector("#speqs"),
                 ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
             )
         </script>
