--- a/test.html
+++ b/test.html
@@ -34,10 +34,14 @@
         </div>
 
         <script type="module">
-            import {type} from "./univasset/scripts/basefunctions/index";
+            import {type} from "./univasset/scripts/basefunctions/";
 
             /* Working
             ./univasset/scripts/basefunctions/index.js
+            */
+
+            /* Not Working
+            ./univasset/scripts/basefunctions/index
             */
 
             const div = document.querySelector('#main_content div');
@@ -54,7 +58,7 @@
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
 
-            div.textContent = "./univasset/scripts/basefunctions/index"
+            div.textContent = "./univasset/scripts/basefunctions/"
             span.textContent = ["asdf", 23, false, null, undefined, [], {}, Symbol.iterator].map(type).join(" ")
         </script>
     </body>
