--- a/GFL/index.html
+++ b/GFL/index.html
@@ -5,19 +5,22 @@
         <script type="module">
             import {timer} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
-            //timer(document.getElementById('event'), 'Mar 06, 2023 23:59 UTC-0800',
-            //    'https://preview.redd.it/sip8lqjbh9ja1.jpg?width=1600&format=pjpg&auto=webp&v=enabled&s=54d124e31725023e06155b6b4eaea62c225d0290');
+            timer(document.getElementById('event'), "Apr 03, 2023 23:59 UTC-0800",
+                "https://pbs.twimg.com/media/FqgWmU4aEAIUybb?format=jpg&name=large");
 
-            const nextPass = timer.bind(null, document.getElementById('battlepass'));
+            const nextPass = timer.bind(null, document.getElementById('battlepass'), "Apr 23, 2023 23:59 UTC-0800",
+                "");
             timer(document.getElementById('battlepass'), 'Mar 19, 2023 23:59 UTC-0800',
                 'https://preview.redd.it/lacxhmhbpoga1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=d820f33650f44cae82e839c4d8a2d13237bf88c9',
                 {onEnd: nextPass});
 
             document.getElementById("coalition")
 
-            // const nextBanner = timer.bind(null, document.getElementById('skin-banner'))
+            const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "Apr 10, 2023 23:59 UTC-0800",
+                "https://iopwiki.com/images/f/fb/Farthest_Distance_Login_Wallpaper.png");
             timer(document.getElementById('skin-banner'), 'Mar 13, 2023 23:59 UTC-0800',
-                'https://iopwiki.com/images/f/ff/New_Year_Nostalgia_Login_Wallpaper.png');
+                'https://iopwiki.com/images/f/ff/New_Year_Nostalgia_Login_Wallpaper.png',
+                {onEnd: nextBanner});
 
             timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
                 'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
