--- a/GFL/index.html
+++ b/GFL/index.html
@@ -14,16 +14,17 @@
                 'https://preview.redd.it/lacxhmhbpoga1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=d820f33650f44cae82e839c4d8a2d13237bf88c9',
                 {onEnd: nextPass});
 
-            document.getElementById("coalition")
+            timer(document.getElementById("coalition"), "Apr 03, 2023 23:59 UTC-0800",
+                "https://pbs.twimg.com/media/FqLtCZoaEAAWyl3?format=jpg&name=large");
 
-            const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "Apr 10, 2023 23:59 UTC-0800",
-                "https://iopwiki.com/images/f/fb/Farthest_Distance_Login_Wallpaper.png");
-            timer(document.getElementById('skin-banner'), 'Mar 13, 2023 23:59 UTC-0800',
-                'https://iopwiki.com/images/f/ff/New_Year_Nostalgia_Login_Wallpaper.png',
+            const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "",
+                "");
+            timer(document.getElementById('skin-banner'), "Apr 10, 2023 23:59 UTC-0800",
+            "https://iopwiki.com/images/f/fb/Farthest_Distance_Login_Wallpaper.png",
                 {onEnd: nextBanner});
 
-            timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
-                'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
+            //timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
+            //    'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
         </script>
         
         <meta charset='utf-8'>
@@ -47,13 +48,17 @@
     </head>
 
     <style>
-        /* #main_content > table td {
-            border-style: ridge;
-            padding: 5px;
-        } */
-
         #main_content > table > tr {
+            display: flex;
+            flex-wrap: wrap;
+            border-style: initial;
             background-color: initial;
+        }
+
+        #main_content > table > tr > td {
+            background-color: transparent;
+            line-height: 10px;
+            flex: calc(100% / 3);
         }
     </style>
 
