--- a/GFL/index.html
+++ b/GFL/index.html
@@ -63,7 +63,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"GFL Event Timer"</include>
+        <include src="/univasset/scripts/pageheader/header.html">"GFL Main Page and Event Timer"</include>
 
         <div class="container">
             <section id="main_content">
@@ -71,7 +71,7 @@
                     <tr>
                         <td><a href="./faqs">Frequently Asked Questions</a></td>
                         <td><a href="./starter">New Player Guide</a></td>
-                        <td><a href="./docs">Compilations</a></td>
+                        <td><a href="./docs" class="tooltip">Compilations<span class="tooltiptext">Skins, MODs, Furnitures, SPEQs</span></a></td>
                     </tr>
                     <tr>
                         <td><a href="./mainpage">Topics Repository</a></td>
