--- a/GFL/index.html
+++ b/GFL/index.html
@@ -48,14 +48,12 @@
     </head>
 
     <style>
-        #main_content > table > tr {
+        tr {
             display: flex;
             flex-wrap: wrap;
-            border-style: initial;
-            background-color: initial;
         }
 
-        #main_content > table > tr > td {
+        td {
             background-color: transparent;
             line-height: 10px;
             flex: calc(100% / 3);
@@ -75,6 +73,8 @@
                     </tr>
                     <tr>
                         <td><a href="./mainpage">Topics Repository</a></td>
+                        <!-- changelog -->
+                        <!-- glossary -->
                     </tr>
                 </table>
 
